--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.13.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
