--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.26.1",
     "sweetalert": "^2.1.2",
-    "sweetalert2": "^11.13.1"
+    "sweetalert2": "^11.13.1",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
